# MCPPServerSoftware

./: .gitignore  CMakeCache.txt  CMakeLists.txt  MCPPServerSoftware  Makefile  dockerfile  main.cpp  server-config.cfg
me/mskatking/mcppserversoftware/io/: configs.h  json.h  logger.cpp  logger.h
me/mskatking/mcppserversoftware/networking/packets/: packet.cpp  packet.h
me/mskatking/mcppserversoftware/server/: client.cpp  client.h  minecraft_server.cpp  minecraft_server.h
me/mskatking/mcppserversoftware/util/component/: text_components.cpp  text_components.h
me/mskatking/mcppserversoftware/util/identifiers/: uuid.h
